--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<h1>Fox Trot Games</h1>
+<h1>Kingdom Quest Games</h1>
 
-<p>Fox Trot games is games that I make, most of the games star Roxy, who is a fox who enjoys eating tacos, fuit, and dounuts, hanging at the beach, going shoping, and playing with you, Roxy is your own vertual pet, so treat her with the most care possible.
+<p>Kingdom Quest games are games that I make, some of the games star Roxy, who is a fox who enjoys eating tacos, fuit, and dounuts, hanging at the beach, going shoping, and playing with you, Roxy is your own vertual pet, so treat her with the most care possible. Some other games star Adrian, who enjoys playing basketball and hanging out with her freinds, some are cool photos that I put behing music because I think they are cool, I hope you have fun playing games I will add newones every once in a wile, now go play!
 </p>
 
 <div>
